<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contacts.ContactsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="32dp"
                android:background="@drawable/ic_delete"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_add" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contacts_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <View
        android:id="@+id/gray_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_overlay"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_bottom_sheet"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:behavior_hideable="true"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <ImageView
            android:id="@+id/stick"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_bottom_sheet_stick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/vertical_barrier"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:barrierDirection="end"
            app:constraint_referenced_ids="id, name, second_name, phone_number" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/first_barrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="id, contact_id" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/second_barrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="name, contact_name" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/third_barrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="second_name, contact_second_name" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/fourth_barrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="phone_number, contact_phone_number" />

        <TextView
            android:id="@+id/id"
            style="@style/ContactTextStyle"
            android:text="@string/id"
            app:layout_constraintBottom_toTopOf="@id/first_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/stick" />

        <TextView
            android:id="@+id/contact_id"
            style="@style/ContactTextStyle"
            app:layout_constraintBottom_toTopOf="@id/first_barrier"
            app:layout_constraintStart_toStartOf="@id/vertical_barrier"
            app:layout_constraintTop_toTopOf="@id/stick" />

        <TextView
            android:id="@+id/name"
            style="@style/ContactTextStyle"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="@id/second_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_barrier" />

        <EditText
            android:id="@+id/contact_name"
            style="@style/ContactTextStyle"
            android:minWidth="200dp"
            app:layout_constraintBottom_toBottomOf="@id/second_barrier"
            app:layout_constraintStart_toStartOf="@id/vertical_barrier"
            app:layout_constraintTop_toBottomOf="@id/first_barrier" />

        <TextView
            android:id="@+id/second_name"
            style="@style/ContactTextStyle"
            android:text="@string/second_name"
            app:layout_constraintBottom_toTopOf="@id/third_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_barrier" />

        <EditText
            android:id="@+id/contact_second_name"
            style="@style/ContactTextStyle"
            android:minWidth="200dp"
            app:layout_constraintBottom_toTopOf="@id/third_barrier"
            app:layout_constraintStart_toStartOf="@id/vertical_barrier"
            app:layout_constraintTop_toBottomOf="@id/second_barrier" />

        <TextView
            android:id="@+id/phone_number"
            style="@style/ContactTextStyle"
            android:text="@string/phone_number"
            app:layout_constraintBottom_toTopOf="@id/fourth_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/third_barrier" />

        <EditText
            android:id="@+id/contact_phone_number"
            style="@style/ContactTextStyle"
            android:inputType="phone"
            android:minWidth="200dp"
            app:layout_constraintBottom_toTopOf="@id/fourth_barrier"
            app:layout_constraintStart_toStartOf="@id/vertical_barrier"
            app:layout_constraintTop_toBottomOf="@id/third_barrier" />

        <TextView
            android:id="@+id/create_edit_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button"
            android:padding="8dp"
            android:text="@string/save"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fourth_barrier" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>